--- a/GIT/JavaScript/Assignment/Car2.css
+++ b/GIT/JavaScript/Assignment/Car2.css
@@ -8263,4 +8263,19 @@ a.text-dark:hover {
     border: 1px solid #dee2e6 !important;
   }
 }
+
+.arrow {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
 /*# sourceMappingURL=bootstrap.min.css.map */
